# faasmctl

./: .gitignore  LICENSE.md  README.md  dev_requirements.txt  faasm.ini  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml  tests.yml
docs/: README.md  api.md  deploy.md  development.md  invoke.md  managing_cluster.md  wasm.md
faasmctl/: __init__.py  main.py
faasmctl/tasks/: __init__.py  cli.py  delete.py  deploy.py  flush.py  generate.py  invoke.py  logs.py  monitor.py  restart.py  s3.py  scale.py  status.py  upload.py
faasmctl/util/: backend.py  batch.py  compose.py  config.py  deploy.py  docker.py  env.py  faasm.py  flush.py  invoke.py  k8s.py  message.py  network.py  planner.py  random.py  restart.py  results.py  s3.py  time.py  upload.py  version.py
tasks/: __init__.py  format_code.py  git.py
