[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faasmctl"
version = "0.1.0"
authors = [
  { name="Faasm Team", email="foo@bar.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faasm/faasmctl"
"Bug Tracker" = "https://github.com/faasm/faasmctl/issues"

[project.scripts]
faasmctl = "faasmctl.main:main"
