[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faasmctl"
version = "0.47.1"
authors = [
  { name="Faasm Team", email="foo@bar.com" },
]
description = "Command line tool to deploy, manage, and interact with Faasm"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "invoke >= 2.1.3",
    "requests >= 2.31.0",
    "protobuf >= 4.23.4",
    "minio >= 7.2.7",
]

[project.urls]
"Homepage" = "https://github.com/faasm/faasmctl"
"Bug Tracker" = "https://github.com/faasm/faasmctl/issues"

[project.scripts]
faasmctl = "faasmctl.main:main"
